[package]
name = "sensortag"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"

[profile.dev]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[dependencies]
cortexm3 = { path = "../../arch/cortex-m3" }
capsules = { path = "../../capsules" }
kernel = { path = "../../kernel" }
cc26xx = { path = "../../chips/cc26xx" }
cc26x0 = { path = "../../chips/cc26x0" }
